fixed input on mobile devices

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -21,6 +21,7 @@ body.light {
     color: #000;
 }
 
+
 .wrapper {
     height: 100vh;
 }
@@ -311,6 +312,10 @@ footer {
 
 input {
     color: aliceblue;
+}
+
+input:focus {
+    font-size: 1rem;
 }
 
 .input-wrapper {
